# cpp-logger

./: CMakeLists.txt  Logger.hxx  LoggerGlobal.cxx  LoggerGlobal.hxx  README.md  REAME.md  logger.cxx  logger.hxx  sonar-project.properties
include/cpplogger/: global.hxx  logger.hxx
src/: global.cxx  logger.cxx
